2013-03-29  Siddhesh Poyarekar  <siddhesh@redhat.com>

	* sysdeps/ieee754/dbl-64/s_atan.c: Fix formatting.

	* sysdeps/ieee754/dbl-64/e_log.c: Fix formatting.

2013-03-28  Roland McGrath  <roland@hack.frob.com>

	* include/stdlib.h [!SHARED] (__call_tls_dtors):
	Declare with __attribute__ ((weak)).
	* stdlib/exit.c (__libc_atexit) [!SHARED]:
	Call __call_tls_dtors only if it's not NULL.

2013-03-28  Roland McGrath  <roland@hack.frob.com>

	* csu/libc-start.c (__libc_start_main) [!SHARED]: If _dl_aux_init
	didn't do it already, then set _dl_phdr and _dl_phnum based on the
	magic __ehdr_start linker symbol if it's defined.
	* sysdeps/mach/hurd/i386/init-first.c (init1) [!SHARED]: Don't set
	them up here if it was already done.

	* elf/dl-support.c (_dl_phdr): Make pointer to const.
	(_dl_aux_init): Use const in cast when setting it.
	* sysdeps/mach/hurd/i386/init-first.c (init1): Remove superfluous cast.
	* sysdeps/generic/ldsodefs.h [!SHARED] (_dl_phdr): Update decl.
	* csu/libc-tls.c (__libc_setup_tls): Make PHDR pointer to const.

	* sysdeps/generic/ldsodefs.h [!SHARED] (_dl_phdr, _dl_phnum):
	Declare them here.
	* elf/dl-iteratephdr.c [!SHARED] (_dl_phdr, _dl_phnum): Not here.
	* csu/libc-tls.c: Nor here.
	* sysdeps/mach/hurd/i386/init-first.c (init1): Nor here.

	* sysdeps/posix/libc_fatal.c: Don't include <sys/syslog.h>.
	(__libc_message): Never call vsyslog.

2013-03-28  Alan Modra  <amodra@gmail.com>

	* sysdeps/powerpc/powerpc32/start.S (cfi_startproc, cfi_endproc):
	Define as empty.
	* sysdeps/powerpc/powerpc64/start.S (cfi_startproc, cfi_endproc):
	Likewise.

2013-03-28  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	[BZ #15214]
	* sysdeps/ieee754/ldbl-128ibm/e_logl.c (__ieee754_logl): Fix spurious
	underflow.
	* sysdeps/powerpc/fpu/libm-test-ulps: Update.

2013-03-28  Siddhesh Poyarekar  <siddhesh@redhat.com>

	[BZ #15304]
	* hesiod/nss_hesiod/hesiod-grp.c (_nss_hesiod_initgroups_dyn):
	Don't add gid passed as argument.
