@@ -91,8 +91,6 @@ extern const mp_no mptwo;
 # define  TWO52     0x1.0p52		/* 2^52    */
 #endif
 
-#define  ZERO      0.0			/* 0       */
-#define  MZERO     -0.0			/* 0 with the sign bit set */
 #define  ONE       1.0			/* 1       */
 #define  MONE      -1.0			/* -1      */
 #define  TWO       2.0			/*  2      */
@@ -155,7 +153,7 @@ __pow_mp (int pow, mp_no *y, int p)
   Y[0] = ONE;
   Y[1] = 1 << rem;
 
-  /* Everything else is ZERO.  */
+  /* Everything else is 0.  */
   for (i = 2; i <= p; i++)
-    Y[i] = ZERO;
+    Y[i] = 0;
 }
