@@ -1,5 +1,15 @@
 2013-03-29  Siddhesh Poyarekar  <siddhesh@redhat.com>
 
+	* sysdeps/ieee754/dbl-64/mpa.h (ZERO, MZERO): Remove defines.
+	(__pow_mp): Replace ZERO and MZERO with their values.
+	* sysdeps/ieee754/dbl-64/e_atan2.c (__ieee754_atan2): Likewise.
+	* sysdeps/ieee754/dbl-64/e_log.c (__ieee754_log): Likewise.
+	* sysdeps/ieee754/dbl-64/mpatan2.c (__mpatan2): Likewise.
+	* sysdeps/ieee754/dbl-64/mpexp.c (__mpexp): Likewise.
+	* sysdeps/ieee754/dbl-64/s_atan.c (atan): Likewise.
+	* sysdeps/powerpc/power4/fpu/mpa.c (__mul): Likewise.
+	(__sqr): Likewise.
+
 	* sysdeps/ieee754/dbl-64/s_atan.c: Fix formatting.
 
 	* sysdeps/ieee754/dbl-64/e_log.c: Fix formatting.
